# orgmcalc

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: api_doc.md  auth_api.md  release_auth_jwks_cleanup.md
externo/: api.md
migrations/: 0001_init.sql  0002_calculos_relaciones.sql  0003_file_assets.sql  0004_google_oauth.sql  0005_tipo_calculos_refresh_tokens.sql  0006_fix_calculos_relationships.sql  0007_project_cliente_logo.sql
scripts/: import_from_orgmbt.py  smoke_test.sh  test_api.sh
src/orgmcalc/: __init__.py  config.py
src/orgmcalc/api/: app.py  dependencies.py
src/orgmcalc/db/: base.py  connection.py  migrate.py  session.py
src/orgmcalc/models/: __init__.py  auth.py  calculo.py  cliente.py  documento.py  empresa.py  file_asset.py  ingeniero.py  project.py  tipo_calculo.py
src/orgmcalc/repositories/: auth.py  calculo_empresas.py  calculo_ingenieros.py  calculos.py  clientes.py  documentos.py  empresas.py  files.py  ingenieros.py  projects.py
src/orgmcalc/schemas/: auth.py  calculos.py  clientes.py  common.py  documentos.py  empresas.py  files.py  ingenieros.py  projects.py
src/orgmcalc/services/: auth.py  calculos.py  clientes.py  documentos.py  empresas.py  files.py  ingenieros.py  jwks_verifier.py  projects.py
src/orgmcalc/storage/: keys.py  object_store.py
tests/: conftest.py  test_api_basic.py
tests/api/: test_auth_dependency.py  test_protected_routes_auth.py
tests/migrations/: test_auth_cleanup_migration.py
tests/services/: test_jwks_verifier.py
(+11 files in other folders)
